# robust-fastapi-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0d3d1f8a7c2a_create_auth_tables.py  63aa39e6bb9c_create_book_table.py
settings/: base.yaml
src/robust_fastapi_api/: app.py  health.py
src/robust_fastapi_api/core/: datetime.py  health.py  logging.py
src/robust_fastapi_api/core/db/: session.py
src/robust_fastapi_api/core/email/: __init__.py  email.py
src/robust_fastapi_api/core/email/templates/: account_activation.html  password_reset.html
src/robust_fastapi_api/core/redis/: session.py
src/robust_fastapi_api/core/security/: password.py  sanitizer.py  token.py
src/robust_fastapi_api/core/settings/: __init__.py  loader.py  settings.py
src/robust_fastapi_api/domain/auth/: security.py
src/robust_fastapi_api/domain/auth/routers/: auth_router.py
src/robust_fastapi_api/domain/auth/schemas/: fields.py  models.py
src/robust_fastapi_api/domain/auth/services/: auth_service.py
src/robust_fastapi_api/domain/crud/models/: __init__.py  book_model.py
src/robust_fastapi_api/domain/crud/repositories/: book_repository.py
src/robust_fastapi_api/domain/crud/routers/: book_router.py
src/robust_fastapi_api/domain/crud/schemas/: book_schemas.py
src/robust_fastapi_api/domain/crud/services/: book_service.py
src/robust_fastapi_api/domain/socket/: socket_router.py  socket_service.py
src/robust_fastapi_api/domain/sse/: sse_router.py  sse_service.py
src/robust_fastapi_api/domain/users/models/: oauth_token_model.py  unverified_user_model.py  user_model.py
src/robust_fastapi_api/domain/users/repositories/: oauth_token_repository.py  unverified_user_repository.py  (+1 more)
src/robust_fastapi_api/middleware/: log_request.py  sanitize.py
(+5 files in other folders)
